knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/About_Facility__c.field-meta.xml
<CustomField>
    <fullName>About_Facility__c</fullName>
    <label>About Facility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>