knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Academic_Facility_chk__c.field-meta.xml
<CustomField>
    <fullName>Academic_Facility_chk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic Facility</label>
    <type>Checkbox</type>
</CustomField>