knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Accepts_eSignature_Docs__c.field-meta.xml
<CustomField>
    <fullName>Accepts_eSignature_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts eSignature Docs</label>
    <type>Checkbox</type>
</CustomField>