knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Accessibility_of_Offerings__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_of_Offerings__c</fullName>
    <label>Accessibility of Offerings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>