knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/accHierarchy__Hierarchy_Parents__c.field-meta.xml
<CustomField>
    <fullName>accHierarchy__Hierarchy_Parents__c</fullName>
    <label>Hierarchy Parents</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>