knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Account_Hierarchy_Path__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy_Path__c</fullName>
    <formula>IF(
  ISBLANK(Parent.Name), 
  Name, 
  IF(
    ISBLANK(Parent.Parent.Name), 
    Parent.Name + &apos; &gt; &apos; + Name, 
    IF(
      ISBLANK(Parent.Parent.Parent.Name), 
      Parent.Parent.Name + &apos; &gt; &apos; + Parent.Name + &apos; &gt; &apos; + Name, 
      Parent.Parent.Parent.Name + &apos; &gt; &apos; + Parent.Parent.Name + &apos; &gt; &apos; + Parent.Name + &apos; &gt; &apos; + Name
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Hierarchy Path</label>
    <type>Text</type>
</CustomField>