knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Account_Hospital_Site__c.field-meta.xml
<CustomField>
    <fullName>Account_Hospital_Site__c</fullName>
    <label>Account Hospital Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTAC</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>