knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Account_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Title__c</fullName>
    <formula>$User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Title</label>
    <type>Text</type>
</CustomField>