knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Sub-system</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Free-standing ED</fullName>
            </value>
            <value>
                <fullName>Physician Group</fullName>
            </value>
            <value>
                <fullName>National Firm</fullName>
            </value>
            <value>
                <fullName>Regional Firm</fullName>
            </value>
            <value>
                <fullName>LTAC</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility Corporation</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility Corporation</fullName>
            </value>
            <value>
                <fullName>ALF Corp</fullName>
                <isActive>false</isActive>
                <label>ALF Corp</label>
            </value>
            <value>
                <fullName>Health System</fullName>
                <isActive>false</isActive>
                <label>Health System</label>
            </value>
            <value>
                <fullName>Inactive Account</fullName>
                <isActive>false</isActive>
                <label>Inactive Account</label>
            </value>
            <value>
                <fullName>Non-Acute Care Hospital</fullName>
                <isActive>false</isActive>
                <label>Non-Acute Care Hospital</label>
            </value>
            <value>
                <fullName>SNF Corp</fullName>
                <isActive>false</isActive>
                <label>SNF Corp</label>
            </value>
            <value>
                <fullName>SNF System</fullName>
                <isActive>false</isActive>
                <label>SNF System</label>
            </value>
            <value>
                <fullName>Swing Bed Unit</fullName>
                <isActive>false</isActive>
                <label>Swing Bed Unit</label>
            </value>
            <value>
                <fullName>VA/Military Hospital</fullName>
                <isActive>false</isActive>
                <label>VA/Military Hospital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>