knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Accounts_Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Power_of_1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts - Power of 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>