knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Accreditation_Agency__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Agency__c</fullName>
    <label>Accreditation Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAAHC (Accreditation Association for Ambulatory Health Care)</fullName>
            </value>
            <value>
                <fullName>CARF – Commission on Accreditation of Rehab Facilities</fullName>
            </value>
            <value>
                <fullName>CIHQ (Center for Improvement in Healthcare Quality)</fullName>
            </value>
            <value>
                <fullName>DNV GL (DNV GL - Healthcare)</fullName>
            </value>
            <value>
                <fullName>HFAP (Healthcare Facilities Accreditation Program)</fullName>
            </value>
            <value>
                <fullName>Institute for Medical Quality (IMQ)</fullName>
            </value>
            <value>
                <fullName>TJC (The Joint Commission)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>