knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ACO__c.field-meta.xml
<CustomField>
    <fullName>ACO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACO</label>
    <type>Checkbox</type>
</CustomField>