knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Acute_Beds__c.field-meta.xml
<CustomField>
    <fullName>Acute_Beds__c</fullName>
    <label>Acute Beds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>