knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ALF_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>ALF_Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALF Incumbent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Current ALF Incumbent)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>