knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ALF_Incumbent_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>ALF_Incumbent_Group_Type__c</fullName>
    <label>ALF Incumbent Group Type</label>
    <type>TextArea</type>
</CustomField>