knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/AVE_AGE_PLANT__c.field-meta.xml
<CustomField>
    <fullName>AVE_AGE_PLANT__c</fullName>
    <description>Average Age of Plant</description>
    <label>Average Age Plant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>