knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Avg_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Avg_Weighted_Score__c</fullName>
    <label>Avg Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>