knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/BAA_c__c.field-meta.xml
<CustomField>
    <fullName>BAA_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAA</label>
    <type>Checkbox</type>
</CustomField>