knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/BAA_Declined_by_Facility__c.field-meta.xml
<CustomField>
    <fullName>BAA_Declined_by_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAA Declined by Facility</label>
    <type>Checkbox</type>
</CustomField>