knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/BAA_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>BAA_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAA Not Needed</label>
    <type>Checkbox</type>
</CustomField>