knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Badges__c.field-meta.xml
<CustomField>
    <fullName>Badges__c</fullName>
    <label>Badges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>