knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Base_Pay__c.field-meta.xml
<CustomField>
    <fullName>Base_Pay__c</fullName>
    <label>(PHY) Blended Hourly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>