knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/BED_UTILIZATION__c.field-meta.xml
<CustomField>
    <fullName>BED_UTILIZATION__c</fullName>
    <description>Bed Utilization Rate</description>
    <label>Bed Utilization</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>