knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Bed_Utilization_formula__c.field-meta.xml
<CustomField>
    <fullName>Bed_Utilization_formula__c</fullName>
    <formula>BED_UTILIZATION__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed Utilization</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>