knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Billians_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Billians_Unique_ID__c</fullName>
    <formula>AccountNumber</formula>
    <label>Billian&apos;s Unique ID</label>
    <type>Text</type>
</CustomField>