knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Billing_Only_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Only_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Only Account</label>
    <type>Checkbox</type>
</CustomField>