knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Bordering_States__c.field-meta.xml
<CustomField>
    <fullName>Bordering_States__c</fullName>
    <label>Bordering States</label>
    <type>TextArea</type>
</CustomField>