knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/BPCIA_Entity__c.field-meta.xml
<CustomField>
    <fullName>BPCIA_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BPCIA Entity</label>
    <type>Checkbox</type>
</CustomField>