knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <label>BPID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>