knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Call_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Call_to_Action__c</fullName>
    <description>Clear ask for sales assistance at the right time</description>
    <inlineHelpText>Clear ask for sales assistance at the right time</inlineHelpText>
    <label>Call to Action</label>
    <type>TextArea</type>
</CustomField>