knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Capital_One_Bank__c.field-meta.xml
<CustomField>
    <fullName>Capital_One_Bank__c</fullName>
    <label>Capital One Bank</label>
    <length>20</length>
    <type>Text</type>
</CustomField>