knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CBSA_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>CBSA_Code_Description__c</fullName>
    <description>Core Based Statistical Area (CBSA)</description>
    <label>CBSA Code Description</label>
    <type>TextArea</type>
</CustomField>