knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CBSA_POPULATION_EST_2011_07_01__c.field-meta.xml
<CustomField>
    <fullName>CBSA_POPULATION_EST_2011_07_01__c</fullName>
    <description>2011 Population of CBSA Hospital is located in</description>
    <label>CBSA Population Est. 2011-07-01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>