knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CBSA_POPULATION_GROWTH_2010_2011__c.field-meta.xml
<CustomField>
    <fullName>CBSA_POPULATION_GROWTH_2010_2011__c</fullName>
    <description>Growth in population for CBSA from 2010 to 2011</description>
    <label>CBSA Population Growth 2010-2011</label>
    <length>50</length>
    <type>Text</type>
</CustomField>