knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Charity_Care_Charges__c.field-meta.xml
<CustomField>
    <fullName>Charity_Care_Charges__c</fullName>
    <description>Charity Care Charges</description>
    <label>Charity Care Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>