knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Chest_Pain_Center_Certified__c.field-meta.xml
<CustomField>
    <fullName>Chest_Pain_Center_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chest Pain Center Certified</label>
    <type>Checkbox</type>
</CustomField>