knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIN</label>
    <type>Checkbox</type>
</CustomField>