knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CIN_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>CIN_Affiliations__c</fullName>
    <description>List of Clinically Integrated Network Affiliations</description>
    <label>CIN Affiliations</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>