knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Clarity_of_Offerings_How_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Clarity_of_Offerings_How_Delivered__c</fullName>
    <description>Clarity of Offerings / How Delivered - People, Process, Tools &amp;/or Technology</description>
    <inlineHelpText>Clarity of Offerings / How Delivered - People, Process, Tools &amp;/or Technology</inlineHelpText>
    <label>Clarity of Offerings / How Delivered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>