knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Division__c.field-meta.xml
<CustomField>
    <fullName>Client_Division__c</fullName>
    <formula>Client_Operations__r.Level_2__c</formula>
    <label>Client Division</label>
    <type>Text</type>
</CustomField>