knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Operations__c.field-meta.xml
<CustomField>
    <fullName>Client_Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Operations</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Operational_Structure__c.Type__c</field>
            <operation>equals</operation>
            <value>Client Operations</value>
        </filterItems>
        <filterItems>
            <field>Operational_Structure__c.Type__c</field>
            <operation>equals</operation>
            <value>Legacy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Operational_Structure__c</referenceTo>
    <relationshipLabel>Accounts (Client Operations)</relationshipLabel>
    <relationshipName>ClientOperationsAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>