knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Ops_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Ops_Level_2__c</fullName>
    <formula>Client_Operations__r.Level_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Ops Level 2</label>
    <type>Text</type>
</CustomField>