knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Ops_Tree__c.field-meta.xml
<CustomField>
    <fullName>Client_Ops_Tree__c</fullName>
    <formula>Client_Operations__r.Level_2__c &amp; &quot; &gt; &quot; &amp; Client_Operations__r.Level_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Ops Tree</label>
    <type>Text</type>
</CustomField>