knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Owner_Type__c</fullName>
    <label>Client Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Owned</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Christus JV</fullName>
            </value>
            <value>
                <fullName>PFH</fullName>
            </value>
            <value>
                <fullName>SCP Owned</fullName>
                <isActive>false</isActive>
                <label>SCP Owned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>