knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Region__c.field-meta.xml
<CustomField>
    <fullName>Client_Region__c</fullName>
    <formula>Client_Operations__r.Level_1__c</formula>
    <label>Client Region</label>
    <type>Text</type>
</CustomField>