knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Client_Service_Team__c</fullName>
    <description>Client Service Team</description>
    <label>Client Service Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S1T1</fullName>
            </value>
            <value>
                <fullName>S1T2</fullName>
            </value>
            <value>
                <fullName>S1T3</fullName>
            </value>
            <value>
                <fullName>S2T1</fullName>
            </value>
            <value>
                <fullName>S2T2</fullName>
            </value>
            <value>
                <fullName>S2T3</fullName>
            </value>
            <value>
                <fullName>S2T4</fullName>
            </value>
            <value>
                <fullName>S2T5</fullName>
            </value>
            <value>
                <fullName>S3T1</fullName>
            </value>
            <value>
                <fullName>S3T2</fullName>
            </value>
            <value>
                <fullName>S3T3</fullName>
            </value>
            <value>
                <fullName>S4T1</fullName>
            </value>
            <value>
                <fullName>S4T2</fullName>
            </value>
            <value>
                <fullName>S4T3</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>GL I</fullName>
            </value>
            <value>
                <fullName>GL II</fullName>
            </value>
            <value>
                <fullName>HM Central</fullName>
            </value>
            <value>
                <fullName>HM East</fullName>
            </value>
            <value>
                <fullName>HM West</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>MW II</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>SE II</fullName>
            </value>
            <value>
                <fullName>SE III</fullName>
            </value>
            <value>
                <fullName>SE IV</fullName>
            </value>
            <value>
                <fullName>SE V</fullName>
            </value>
            <value>
                <fullName>SE VI</fullName>
            </value>
            <value>
                <fullName>SE VII</fullName>
            </value>
            <value>
                <fullName>SW I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>