knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>Client_Service_Tier__c</fullName>
    <label>Client Service Tier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>