knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Startup_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Startup_Date__c</fullName>
    <label>Client Startup Date</label>
    <type>Date</type>
</CustomField>