knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Client_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Termination_Date__c</fullName>
    <description>Date of most recent term from client</description>
    <label>Client Termination Date</label>
    <type>Date</type>
</CustomField>