knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CMI__c.field-meta.xml
<CustomField>
    <fullName>CMI__c</fullName>
    <description>Overall Case Mix Index</description>
    <label>CMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>