knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CMI_MED__c.field-meta.xml
<CustomField>
    <fullName>CMI_MED__c</fullName>
    <description>Medical DRG Case Mix Index</description>
    <label>CMI Med</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>