knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CMI_SURG__c.field-meta.xml
<CustomField>
    <fullName>CMI_SURG__c</fullName>
    <description>Surgical DRG Case Mix Index</description>
    <label>CMI Surg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>