knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CMS_ID__c.field-meta.xml
<CustomField>
    <fullName>CMS_ID__c</fullName>
    <label>CMS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>