knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Communication_Comments__c.field-meta.xml
<CustomField>
    <fullName>Communication_Comments__c</fullName>
    <label>Communication Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>