knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Community_Comments__c.field-meta.xml
<CustomField>
    <fullName>Community_Comments__c</fullName>
    <label>Community Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>