knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Community_Information__c.field-meta.xml
<CustomField>
    <fullName>Community_Information__c</fullName>
    <label>Community Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>