knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Competitive_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Positioning__c</fullName>
    <label>Competitive Positioning</label>
    <type>TextArea</type>
</CustomField>