knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Conciseness_of_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Conciseness_of_Presentation__c</fullName>
    <description>Message delivered in fewer words; leaving memorable impression &amp; value supporting facts.</description>
    <inlineHelpText>Message delivered in fewer words; leaving memorable impression &amp; value supporting facts.</inlineHelpText>
    <label>Conciseness of Presentation</label>
    <type>TextArea</type>
</CustomField>