knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Contract_Renewal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Rate__c</fullName>
    <label>Contract Renewal Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>