knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketed</fullName>
            </value>
            <value>
                <fullName>TSG Contract</fullName>
            </value>
            <value>
                <fullName>LT Contract</fullName>
            </value>
            <value>
                <fullName>Start Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>