knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/COST_PER_DISCHARGE_CMI_ADJUSTED__c.field-meta.xml
<CustomField>
    <fullName>COST_PER_DISCHARGE_CMI_ADJUSTED__c</fullName>
    <description>Cost Per Discharge, Case Mix Adjusted</description>
    <label>Cost Per Discharge CMI Adjusted</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>